--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   kiwi: ^0.2.0
   cached_network_image: ^0.8.0
   font_awesome_flutter: ^8.4.0
+  flutter_slidable: ^0.5.3
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
