--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,7 +19,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  cloud_firestore: ^0.12.5+1
+  cloud_firestore: ^0.12.5+2
   built_value: ^6.6.0
   built_collection: ^4.2.2
   http: ^0.12.0+2
@@ -28,6 +28,15 @@ dependencies:
   cached_network_image: ^0.8.0
   font_awesome_flutter: ^8.4.0
   flutter_slidable: ^0.5.3
+  flutter_launcher_icons: ^0.7.2
+
+flutter_icons:
+  ios: true
+  android: true
+  image_path_ios: 'assets/launcher/icon.png'
+  image_path_android: 'assets/launcher/icon.png'
+  #  adaptive_icon_background: 'assets/launcher/background.png'
+  # adaptive_icon_foreground: 'assets/launcher/foreground.png'
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -48,8 +57,8 @@ flutter:
   # the material Icons class.
   uses-material-design: true
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #  - images/a_dot_burr.jpeg
+  assets:
+    - assets/launcher/icon.png
   #  - images/a_dot_ham.jpeg
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
