--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,13 +28,7 @@ dependencies:
   cached_network_image: ^0.8.0
   font_awesome_flutter: ^8.4.0
   flutter_slidable: ^0.5.3
-  flutter_launcher_icons: ^0.7.2
 
-flutter_icons:
-  ios: true
-  android: true
-  image_path_ios: 'assets/launcher/icon.png'
-  image_path_android: 'assets/launcher/icon.png'
   #  adaptive_icon_background: 'assets/launcher/background.png'
   # adaptive_icon_foreground: 'assets/launcher/foreground.png'
 
@@ -47,6 +41,14 @@ dev_dependencies:
     sdk: flutter
   build_runner: ^1.5.2
   built_value_generator: ^6.6.0
+  flutter_launcher_icons: ^0.7.2
+
+flutter_icons:
+  ios: true
+  android: true
+  image_path_ios: 'assets/launcher/icon-ios.png'
+  image_path_android: 'assets/launcher/icon-android.png'
+
 # For information on the generic Dart part of this file, see the
 # following page: https://www.dartlang.org/tools/pub/pubspec
 
