update splash screen

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -45,6 +45,8 @@ android {
         versionName flutterVersionName
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         multiDexEnabled true
+        vectorDrawables.useSupportLibrary = true
+
     }
 
     buildTypes {
